<resources>
    <string name="app_name">"MyPOSMate®"</string>
    <string name="string1">"MyPOSMate is online\n\nReconnecting with the backend."</string>
    <string name="terminalId">"Terminal ID *"</string>
    <string name="amount">"Amount "</string>
    <string name="amount1">"*Refund Amount "</string>
    <string name="refund_reason">"*Refund Reason "</string>
    <string name="select_payment">"Select Payment Type"</string>
    <string name="select_payment_type">"Please Select Payment Type"</string>
    <string name="reference">"Reference "</string>
    <string name="uniqueId">"Access ID *"</string>
    <string name="sale_amount">"Sale amount NZ"</string>
    <string name="terminalIp">"Terminal IP *"</string>
    <string name="merchant_id">"Merchant ID *"</string>
    <string name="branchID">"Branch ID *"</string>
    <string name="configId">"Config ID *"</string>
    <string name="save_and_ok">"Save &amp; Ok"</string>
    <string name="ok">"Ok"</string>
    <string name="cancel">"Cancel"</string>
    <string name="exitapp">"EXIT APP"</string>
    <string name="already_registered">"Already Registered?"</string>
    <string name="loading">"Loading......."</string>
    <string name="please_wait_for_authentication">"Please wait while authenticating."</string>
    <string name="MyPOSMate_Version">"MyPOSMate® Version "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="not_support">Not Support</string>
    <string name="beeper">Beeper</string>
    <string name="card">Card</string>
    <string name="emv">EMV</string>
    <string name="led">LED</string>
    <string name="other">Other</string>
    <string name="simple_pay">Simple Pay</string>
    <string name="pinpad_dukpt">PINPAD (DUKPT)</string>
    <string name="pinpad_fk">PINPAD (FK)</string>
    <string name="pinpad_mksk">PINPAD (MK/SK)</string>
    <string name="printer">Printer</string>
    <string name="scanner">Scanner</string>
    <string name="serial_port">Serial Port</string>
    <string name="normal">Normal</string>
    <string name="error">Error</string>
    <string name="interval">Interval</string>
    <string name="beep_two_seconds">Beep 2s</string>
    <string name="magnetic_stripe_card">Magnetic Stripe Card</string>
    <string name="cpu_ic_card">CPU IC Card</string>
    <string name="indonesia_rf_card">Indonesia RF Card</string>
    <string name="rf_card">RF Card</string>
    <string name="is_card_in">Is Card In</string>
    <string name="start_process">Start Process</string>
    <string name="get_balance">Get Balance</string>
    <string name="get_dol">Get DOL</string>
    <string name="get_tlv">Get TLV</string>
    <string name="get_data_apdu">Get Data APDU</string>
    <string name="led_on_all">Turn On All</string>
    <string name="led_off_all">Turn Off All</string>
    <string name="operate_red_light">Operate Red Light</string>
    <string name="operate_green_light">Operate Green Light</string>
    <string name="operate_yellow_light">Operate Yellow Light</string>
    <string name="operate_blue_light">Operate Blue Light</string>
    <string name="turn_on_blue_and_red_lights">Turn On Blue And Red Lights</string>
    <string name="init_dukpt_ik_ksn">Init DUKPT Ik KSN</string>
    <string name="get_current_ksn">Get Current KSN</string>
    <string name="increase_current_ksn">Increase Current KSN</string>
    <string name="load_plain_text_key">Load Plain Text Key</string>
    <string name="is_key_exist">Is Key Exist</string>
    <string name="load_encrypted_key">Load Encrypted Key</string>
    <string name="calculate_mac">Calculate MAC</string>
    <string name="calculate_des">Calculate DES</string>
    <string name="start_pin_entry">Start PIN Entry</string>
    <string name="cancel_pin_entry">Cancel PIN Entry</string>
    <string name="start_offline_pin_entry">Start Offline PIN Entry</string>
    <string name="verify_offline_pin">Verify Offline PIN</string>
    <string name="format_pinpad">Format PINPad</string>
    <string name="switch_to_work_mode">Switch To Work Mode</string>
    <string name="encrypt_mag_track">Encrypt Mag Track</string>
    <string name="get_random">Get Random</string>
    <string name="set_serial_number">Set Serial Number</string>
    <string name="delete_key">Delete Key</string>
    <string name="calculate_kcv">Calculate KCV</string>
    <string name="print">Print</string>
    <string name="get_printer_status">Get Printer Status</string>
    <string name="feed_paper">Feed Paper</string>
    <string name="start_front_scan">Start Front Scan</string>
    <string name="start_back_scan">Start Back Scan</string>
    <string name="stop_front_scan">Stop Front Scan</string>
    <string name="stop_back_scan">Stop Back Scan</string>
    <string name="open">Open</string>
    <string name="send_data_timeout_0">Send Data (Timeout = 0)</string>
    <string name="read_data_timeout_0">Read Data (Timeout = 0)</string>
    <string name="send_data_timeout_10000">Send Data (Timeout = 10000)</string>
    <string name="read_data_timeout_10000">Read Data (Timeout = 10000)</string>
    <string name="flush">Flush</string>
    <string name="close">Close</string>
    <string name="get_terminal_info">Get Terminal Info</string>
    <string name="update_system_time">Update System Time</string>
    <string name="is_first_run">Is First Run</string>
    <string name="is_exist">Is Exist</string>
    <string name="get_boolean_param">Get Boolean Param</string>
    <string name="get_string_param">Get String Param</string>
    <string name="sale_search_card_first">Sale (Search Card First)</string>
    <string name="sale_start_emv_process_first">Sale (Start EMV Process First)</string>
    <string name="multimedia">Multimedia</string>
    <string name="video_player">Video Player</string>
    <string name="No_video_files">No video files!</string>
    <string name="please_swipe_card">Please Swipe Card</string>
    <string name="please_insert_card">Please Insert Card</string>
    <string name="please_present_card">Please present Card</string>
    <string name="waiting_for_printing">Waiting For Printing</string>
    <string name="waiting_for_card">Waiting For Card</string>
    <string name="timeout">Timeout</string>
    <string name="transaction_approved">Transaction Approved</string>
    <string name="transaction_declined">Transaction Declined</string>
    <string name="get_icc_log">Get ICC Log</string>
    <string name="get_ecc_log">Get ECC Log</string>
    <string name="other_error">Other Error</string>
    <string name="request_online_authorization">Request Online Authorization</string>
    <string name="power_up_error">Power Up Error</string>
    <string name="unknown_card">Unknown Card</string>
    <string name="activate_error">Activate Error</string>
    <string name="auth_sector_error">Auth Sector Error</string>
    <string name="auth_block_error">Auth Block Error</string>
    <string name="write_block_error">Write Block Error</string>
    <string name="read_block_error">Read Block Error</string>
    <string name="increase_value_error">Increase Value Error</string>
    <string name="decrease_value_error">Decrease Value Error</string>
    <string name="no_data">No Data</string>
    <string name="confirm">Confirm</string>
    <string name="pan">Pan</string>
    <string name="date">Date</string>
    <string name="input_offline_pin_times">Input Offline PIN (%1$d Times)</string>
    <string name="input_offline_pin_one_time">Input Offline PIN (1 time)</string>
    <string name="please_input_pin">Please Input PIN</string>
    <string name="emv_power_up_card_error">Power up card error</string>
    <string name="emv_activate_card_error">Activate card error</string>
    <string name="wait_card_timeout">Wait card timeout</string>
    <string name="not_start_process">Not start process</string>
    <string name="emv_param_error">Emv parameter error</string>
    <string name="no_final_select_data">No final select data</string>
    <string name="amount_empty">Amount empty</string>
    <string name="invalid_operation">Invalid operation</string>
    <string name="dol_type_error">DOL type error</string>
    <string name="emv_thread_is_working_please_try_again_later">EMV thread is working, please try again later</string>
    <string name="the_card_no_candidate_applications">The card no candidate applications</string>
    <string name="public_key_not_set_transaction_is_terminated">public key not set.</string>
    <string name="the_application_of_the_card_has_expired_transaction_terminated">The application of the card has expired, transaction terminated</string>
    <string name="contactless_quickpass_torn_transaction_transaction_is_terminated_please_take_remedial_measures">Contactless quickpass torn transaction, transaction is terminated, please take remedial measures.</string>
    <string name="termination_is_required_transaction_exits_automatically">Termination is required,transaction exits automatically</string>
    <string name="power_up_the_card_again_and_start_transaction">Power up the card again and start transaction(No need to input amount again)</string>
    <string name="service_is_not_allowed_by_the_card">Service is not allowed by the card</string>
    <string name="card_is_locked">Card is locked</string>
    <string name="application_is_locked">Application is locked</string>
    <string name="amount_limit_the_number_of_transactions_limit">Amount limit/The number of transactions limit</string>
    <string name="apdu_error">APDU error</string>
    <string name="apdu_status_code_error">APDU status error</string>
    <string name="return_all_flash_card_process">Return all flash card process</string>
    <string name="merchant_name">MERCHANT NAME</string>
    <string name="merchant_no">MERCHANT NO</string>
    <string name="terminal_no">TERMINAL NO</string>
    <string name="operator_no">OPERATOR NO</string>
    <string name="acquirer">ACQUIRER</string>
    <string name="issuer">ISSUER</string>
    <string name="card_no">CARD NO</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="trans_type">TRANS TYPE</string>
    <string name="batch_no">BATCH NO</string>
    <string name="date_time">DATE TIME</string>
    <string name="request_exception">Request Exception</string>
    <string name="service_crash">Service Crash</string>
    <string name="device_disable">Device Disable</string>
    <string name="device_used">Device Used</string>
    <string name="param_error">Param Error</string>
    <string name="ic_atr_error">IC ATR Error</string>
    <string name="ic_data_error">IC Data Error</string>
    <string name="ic_type_error">IC Type Error</string>
    <string name="ic_for_response">IC For Response</string>
    <string name="ic_need_reset">IC Need Reset</string>
    <string name="ic_no_card">IC No Card</string>
    <string name="ic_no_power">IC No Power</string>
    <string name="ic_sw_error">IC SW Error</string>
    <string name="ic_timeout">IC Timeout</string>
    <string name="insert_error">Insert Error</string>
    <string name="verify_track_or_data_error">Verify Track Or Data Error</string>
    <string name="need_restart">Need Restart</string>
    <string name="empty_card">Empty Card</string>
    <string name="ic_no_verify">IC No Verify</string>
    <string name="ack_error">ACK Error</string>
    <string name="auth_error">Auth Error</string>
    <string name="fuse_done">Fuse Done</string>
    <string name="init_auth_error">Init Auth Error</string>
    <string name="ic_no_auth">IC No Auth</string>
    <string name="operation_forbid">Operation Forbid</string>
    <string name="operation_fail">Operation Fail</string>
    <string name="read_aac_error">Read AAC Error</string>
    <string name="read_ar_error">Read AR Error</string>
    <string name="read_ci_error">Read CI Error</string>
    <string name="read_fail">Read Fail</string>
</resources>