<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"

    >

    <TextView
        android:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#90A4AE"
        android:text="Settings"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <ScrollView
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/TextViewStyle"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:text="@string/terminalId" />

        <EditText
            android:id="@+id/edt_terminal_id"
            style="@style/EditTextStyle"
            android:layout_height="40dp"
            android:enabled="false"
            android:layout_marginLeft="20dp"
            android:minLines="2"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/TextViewStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:text="@string/terminalIp" />

        <EditText
            android:enabled="false"
            android:id="@+id/edt_terminal_ip"
            style="@style/EditTextStyle"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/TextViewStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:text="@string/uniqueId" />

        <EditText
            android:id="@+id/edt_unique_id"
            style="@style/EditTextStyle"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="815b2486c067d1d8"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout

        android:layout_marginTop="20dp"
        android:layout_gravity="center|bottom"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
       >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorBtnBg"
            android:gravity="center"
            android:text="@string/save_and_ok"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorBtnBg"
            android:gravity="center"
            android:text="CLEAR"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_exit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/colorBtnBg"
            android:gravity="center"
            android:text="@string/exitapp"

            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_reset"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="RESET TERMINAL SETTINGS"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


    </LinearLayout>
  </LinearLayout>
    </ScrollView>
</LinearLayout>
