<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_paymentmode"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_smallali"
            android:visibility="invisible" />

        <FrameLayout
            android:id="@+id/ll1"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@+id/img_paymentmode"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img_qrcode"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:background="@drawable/qr_code_border"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/img_success"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/successful_icon"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_failure"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/unsuccessful_icon"
                android:visibility="gone" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_sale_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:gravity="center"
            android:text="@string/sale_amount"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_sale_amount"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorBtnBg"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorBtnBg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_count_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_bottom"
            android:gravity="center"
            android:text="Your qr will expire within 90 Seconds"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>